Replace DIGITALSELF text with logo image in navigation

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="nav" id="nav">
         <div class="nav-container">
             <div class="nav-logo">
-                <span class="logo-text">DIGITALSELF</span>
+                <img src="assets/images/digitalself-logo.png" alt="DigitalSelf" class="logo-image">
             </div>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
