Replace em dashes (—) with hyphens (-) throughout text

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <p>We use creative minds to build cutting-edge technology. Bringing immersive media, XR, AI, content verification, and live streaming to power a trusted platform where live events, creators, and communities meet.</p>
                 </div>
                 <div class="hero-col">
-                    <p>DigitalSelf turns content into shared experience—with extensive partnerships across sport, music, entertainment and culture offering fairer economics and authentic ways to grow.</p>
+                    <p>DigitalSelf turns content into shared experience-with extensive partnerships across sport, music, entertainment and culture offering fairer economics and authentic ways to grow.</p>
                 </div>
             </div>
             <div class="hero-cta" data-scroll-reveal>
@@ -73,7 +73,7 @@
             <p class="section-tagline" data-scroll-reveal>Part broadcast, part interaction. Half stage half living room. A front row seat with a backstage pass.</p>
             
             <div class="platform-description" data-scroll-reveal>
-                <p>DigitalSelf is a social entertainment platform where users can attend live events in sports, music, art, business, and education. It's a space built not just to watch—but to inhabit.</p>
+                <p>DigitalSelf is a social entertainment platform where users can attend live events in sports, music, art, business, and education. It's a space built not just to watch-but to inhabit.</p>
                 <p>Our platform provides a single profile and home where your content, community, and earnings are all in one place, accessible across all devices: mobile, desktop, and VR headsets.</p>
             </div>
 
@@ -95,7 +95,7 @@
             <div class="platform-features">
                 <div class="feature-card" data-scroll-reveal>
                     <h3>Live Streaming, Reimagined</h3>
-                    <p>It's not just about the main event, but everything around it—the atmosphere and the moments that matter.</p>
+                    <p>It's not just about the main event, but everything around it-the atmosphere and the moments that matter.</p>
                 </div>
                 <div class="feature-card" data-scroll-reveal>
                     <h3>Immersive Experiences</h3>
@@ -103,7 +103,7 @@
                 </div>
                 <div class="feature-card" data-scroll-reveal>
                     <h3>Social Layers</h3>
-                    <p>Watch together, react in real-time, and be part of a shared experience with others—wherever you are.</p>
+                    <p>Watch together, react in real-time, and be part of a shared experience with others-wherever you are.</p>
                 </div>
                 <div class="feature-card" data-scroll-reveal>
                     <h3>Fairer Economics</h3>
