--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
             <div class="nav-logo">
                 <img src="assets/images/digitalself-logo.png" alt="DigitalSelf" class="logo-image">
             </div>
-            <ul class="nav-menu">
+            <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <ul class="nav-menu" id="navMenu">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#platform" class="nav-link">The Platform</a></li>
                 <li><a href="#production" class="nav-link">Production Services</a></li>
